Update CustomUserDetailsService.java